# wazero-bride-jvm

./: README.md  STEP.md  build.sh  go.mod  sample.sh
go-library/: core.go
go-library/bridge/: bridge.go
go-library/engine/: engine.go
go-sample/: wazero-sample.go
wazero-bride-c/: CMakeLists.txt  build.sh  configure.sh
wazero-bride-c/sample/: WazeroSample.cpp  wazero-sample.cpp
wazero-bride-c/src/: BridgeJni.cpp  WazeroCore.cpp  WazeroCore.h  bridge.cpp
wazero-kotlin/: README.md  build.gradle.kts  settings.gradle.kts
wazero-kotlin/app/: build.gradle.kts
wazero-kotlin/app/src/main/kotlin/: App.kt
wazero-kotlin/app/src/main/kotlin/com/bridge/wasmline/: WasmBridge.kt
wazero-kotlin/gradle/: libs.versions.toml
wazero-kotlin/lib/: add.wasm  wazero-crow.wazero.wasmline-wazero-core-wazero-plugin.wasm
wazero-kotlin/wazero-app/application/: build.gradle.kts
wazero-kotlin/wazero-app/application/src/main/kotlin/crow/wazero/wasmline/: App.kt
wazero-kotlin/wazero-core/wazero-common/: build.gradle.kts
wazero-kotlin/wazero-core/wazero-plugin/: build.gradle.kts
wazero-kotlin/wazero-core/wazero-plugin/src/wasmJsMain/kotlin/crow.wazero.wasmline/: Plugin.kt  Step.md
wazero-kotlin/wazero-core/wazero-plugin/src/wasmJsMain/kotlin/crow/wazero/wasmline/: Plugin.kt
wazero-kotlin/wazero-library/: build.gradle.kts
wazero-kotlin/wazero-library/src/main/kotlin/com/bridge/wasmline/: WasmBridge.kt
wazero-kotlin/wazero-library/src/main/kotlin/crow/wazero/wasmline/: WasmBridge.kt
